update loi khong mo duoc file

--- a/more/study.html
+++ b/more/study.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="/multi_page/index.html">Home</a>
+    <a href="./index.html">Home</a>
     <!-- Dẫn qua intro -->
-    <a href="/multi_page/more/intro.html"> Introduce</a>
+    <a href="./more/intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
-    <a href="/multi_page/more/study.html">Study</a>
+    <a href="./more/study.html">Study</a>
     <h1>Study</h1>
     <hr />
     <h3>Những môn đã học</h3>
@@ -29,12 +29,7 @@
     </ol>
     <hr />
     <center>
-      <img
-        src="/multi_page/img/images.png"
-        alt=""
-       
-        initial-scale="1.0"
-      />
+      <img src="/multi_page/img/images.png" alt="" initial-scale="1.0" />
     </center>
   </body>
 </html>
