--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="/multi_page/index.html">Home</a>
+    <a href="./index.html">Home</a>
     <!-- Dẫn qua intro -->
-    <a href="/multi_page/more/intro.html"> Introduce</a>
+    <a href="./more/intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
-    <a href="/multi_page/more/study.html">Study</a>
+    <a href="./more/study.html">Study</a>
     <h1>Welcome My Website</h1>
     <hr />
     <h2>About me</h2>
