--- a/more/intro.html
+++ b/more/intro.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="/multi_page/index.html">Home</a>
+    <a href="./index.html">Home</a>
     <!-- Dẫn qua intro -->
-    <a href="/multi_page/more/intro.html"> Introduce</a>
+    <a href="./more/intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
-    <a href="/multi_page/more/study.html">Study</a>
+    <a href="./more/study.html">Study</a>
     <h1>About me</h1>
     <hr />
     <p>
@@ -38,7 +38,6 @@
         height="300"
         initial-scale="1.0"
         hspace="32"
-        
       />
     </a>
   </body>
