upload loi duong dan

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="./index.html">Home</a>
+    <a href="./">Home</a>
     <!-- Dẫn qua intro -->
     <a href="./more/intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
