--- a/more/intro.html
+++ b/more/intro.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="./index.html">Home</a>
+    <a href="../index.html">Home</a>
     <!-- Dẫn qua intro -->
-    <a href="./more/intro.html"> Introduce</a>
+    <a href="./"> Introduce</a>
     <!-- Dẫn qua study -->
-    <a href="./more/study.html">Study</a>
+    <a href="./study.html">Study</a>
     <h1>About me</h1>
     <hr />
     <p>
@@ -32,7 +32,7 @@
     <hr />
     <a href="https://www.ctu.edu.vn/" target="_blank">
       <img
-        src="/multi_page/img/1-20210309_104552_hgpl.jpg"
+        src="./img/1-20210309_104552_hgpl.jpg"
         alt=""
         width="1200"
         height="300"
