--- a/more/study.html
+++ b/more/study.html
@@ -8,11 +8,11 @@
   <body>
     <!-- Thêm link đường dẫn -->
     <!-- Dẫn qua home -->
-    <a href="./index.html">Home</a>
+    <a href="../index.html">Home</a>
     <!-- Dẫn qua intro -->
-    <a href="./more/intro.html"> Introduce</a>
+    <a href="./intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
-    <a href="./more/study.html">Study</a>
+    <a href="./">Study</a>
     <h1>Study</h1>
     <hr />
     <h3>Những môn đã học</h3>
