update loi hinh anh

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <hr />
     <center>
       <img
-        src="/multi_page/img/hinh-anh-ve-su-co-gang-33.jpg"
+        src="./img/hinh-anh-ve-su-co-gang-33.jpg"
         alt=""
         width="1200"
         height="200"
