--- a/more/intro.html
+++ b/more/intro.html
@@ -32,7 +32,7 @@
     <hr />
     <a href="https://www.ctu.edu.vn/" target="_blank">
       <img
-        src="./img/1-20210309_104552_hgpl.jpg"
+        src="../img/1-20210309_104552_hgpl.jpg"
         alt=""
         width="1200"
         height="300"
