--- a/more/study.html
+++ b/more/study.html
@@ -29,7 +29,7 @@
     </ol>
     <hr />
     <center>
-      <img src="/multi_page/img/images.png" alt="" initial-scale="1.0" />
+      <img src="../img/images.png" alt="" initial-scale="1.0" />
     </center>
   </body>
 </html>
