update loi anh 02

--- a/index.html
+++ b/index.html
@@ -35,14 +35,6 @@
       >
     </h5>
     <hr />
-    <center>
-      <img
-        src="./img/hinh-anh-ve-su-co-gang-33.jpg"
-        alt=""
-        width="1200"
-        height="200"
-        initial-scale="1.0"
-      />
-    </center>
+    <img src="./img/hinh-anh-ve-su-co-gang-33.jpg" alt="" />
   </body>
 </html>
