--- a/more/intro.html
+++ b/more/intro.html
@@ -31,14 +31,7 @@
     </p>
     <hr />
     <a href="https://www.ctu.edu.vn/" target="_blank">
-      <img
-        src="../img/1-20210309_104552_hgpl.jpg"
-        alt=""
-        width="1200"
-        height="300"
-        initial-scale="1.0"
-        hspace="32"
-      />
+      <img src="../img/1-20210309_104552_hgpl.jpg" alt="" />
     </a>
   </body>
 </html>
