--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="./more/intro.html"> Introduce</a>
     <!-- Dẫn qua study -->
     <a href="./more/study.html">Study</a>
-    <h1>Welcome My Website</h1>
+    <h1>Welcome to My Website</h1>
     <hr />
     <h2>About me</h2>
     <p>
